force-app/main/default/objects/customer__c/customer__c.object-meta.xml
<CustomObject>
    <label>Passengers (Old)</label>
    <nameField>
        <displayFormat>PIF-{00000000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passengers (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>