force-app/main/default/objects/customer__c/fields/city_ob__c.field-meta.xml
<CustomField>
    <fullName>city_ob__c</fullName>
    <label>City of Birth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>