force-app/main/default/objects/customer__c/fields/clean_last_name__c.field-meta.xml
<CustomField>
    <fullName>clean_last_name__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE( last_name__c , &quot;&apos;&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;’&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean Last Name</label>
    <type>Text</type>
</CustomField>