force-app/main/default/objects/customer__c/fields/country_ob__c.field-meta.xml
<CustomField>
    <fullName>country_ob__c</fullName>
    <label>Country of Birth</label>
    <type>TextArea</type>
</CustomField>