force-app/main/default/objects/customer__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <formula>order__r.deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID</label>
    <type>Text</type>
</CustomField>