force-app/main/default/objects/customer__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <formula>order__r.departure_city__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure City</label>
    <type>Text</type>
</CustomField>