force-app/main/default/objects/customer__c/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <label>D.O.B</label>
    <length>10</length>
    <type>Text</type>
</CustomField>