force-app/main/default/objects/customer__c/fields/exported__c.field-meta.xml
<CustomField>
    <fullName>exported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXPORTED</label>
    <type>Checkbox</type>
</CustomField>