force-app/main/default/objects/customer__c/fields/First_Name_user__c.field-meta.xml
<CustomField>
    <fullName>First_Name_user__c</fullName>
    <formula>order__r.first_name_purchaser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FIRST NAME USER</label>
    <type>Text</type>
</CustomField>