force-app/main/default/objects/customer__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>IF(OR(title__c = &apos;Ms&apos;, title__c = &apos;Mrs&apos;,title__c = &apos;Miss&apos;),&apos;Female&apos;,&apos;Male&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>