force-app/main/default/objects/customer__c/fields/guests_qty__c.field-meta.xml
<CustomField>
    <fullName>guests_qty__c</fullName>
    <label>Guests Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>