force-app/main/default/objects/customer__c/fields/insurance_provider__c.field-meta.xml
<CustomField>
    <fullName>insurance_provider__c</fullName>
    <label>Insurance Provider</label>
    <type>TextArea</type>
</CustomField>