force-app/main/default/objects/customer__c/fields/is_waiting_passport__c.field-meta.xml
<CustomField>
    <fullName>is_waiting_passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting New Passport</label>
    <type>Checkbox</type>
</CustomField>