force-app/main/default/objects/customer__c/fields/link_to_full_name__c.field-meta.xml
<CustomField>
    <fullName>link_to_full_name__c</fullName>
    <label>LINK TO FULL NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>