force-app/main/default/objects/customer__c/fields/medical_request__c.field-meta.xml
<CustomField>
    <fullName>medical_request__c</fullName>
    <label>MEDICAL REQUEST</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>