force-app/main/default/objects/customer__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <formula>order__r.deal__r.Merchant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant</label>
    <type>Text</type>
</CustomField>