force-app/main/default/objects/customer__c/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <label>Nationality</label>
    <length>30</length>
    <type>Text</type>
</CustomField>