force-app/main/default/objects/customer__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>Order Number</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>customer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>