force-app/main/default/objects/customer__c/fields/order_numbver_for_linking__c.field-meta.xml
<CustomField>
    <fullName>order_numbver_for_linking__c</fullName>
    <formula>order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>order numbver for linking</label>
    <type>Text</type>
</CustomField>