force-app/main/default/objects/customer__c/fields/Order_Purchaser_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Purchaser_Name__c</fullName>
    <formula>order__r.full_name_purchaser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Purchaser Name</label>
    <type>Text</type>
</CustomField>