force-app/main/default/objects/customer__c/fields/other_request__c.field-meta.xml
<CustomField>
    <fullName>other_request__c</fullName>
    <label>Other Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>