force-app/main/default/objects/customer__c/fields/Passenger_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Replacement__c</fullName>
    <label>Passenger Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allow Replacement</fullName>
            </value>
            <value>
                <fullName>Replacement Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>