force-app/main/default/objects/customer__c/fields/passport_number__c.field-meta.xml
<CustomField>
    <fullName>passport_number__c</fullName>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>