force-app/main/default/objects/customer__c/fields/Passport_Update__c.field-meta.xml
<CustomField>
    <fullName>Passport_Update__c</fullName>
    <label>Passport Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Send Form</fullName>
            </value>
            <value>
                <fullName>Form Sent</fullName>
            </value>
            <value>
                <fullName>Form Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>