force-app/main/default/objects/customer__c/fields/PAX_QTY_Order__c.field-meta.xml
<CustomField>
    <fullName>PAX_QTY_Order__c</fullName>
    <formula>order__r.PAX_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAX QTY(Order)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>