force-app/main/default/objects/customer__c/fields/Pif_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Pif_Statuses__c</fullName>
    <formula>IF(is_waiting_passport__c = true, 


&quot;Not completed&quot;, 
&quot;OK&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pif Status</label>
    <type>Text</type>
</CustomField>