force-app/main/default/objects/customer__c/fields/Postcode_Number__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Number__c</fullName>
    <label>Postcode - Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>