force-app/main/default/objects/customer__c/fields/preferred_date_3__c.field-meta.xml
<CustomField>
    <fullName>preferred_date_3__c</fullName>
    <label>Preferred Date 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>