force-app/main/default/objects/customer__c/fields/preferredbedding__c.field-meta.xml
<CustomField>
    <fullName>preferredbedding__c</fullName>
    <label>Preferred Bedding</label>
    <length>200</length>
    <type>Text</type>
</CustomField>