force-app/main/default/objects/customer__c/fields/Purchaser_email__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_email__c</fullName>
    <formula>order__r.user_email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser email</label>
    <type>Text</type>
</CustomField>