force-app/main/default/objects/customer__c/fields/reference_number__c.field-meta.xml
<CustomField>
    <fullName>reference_number__c</fullName>
    <externalId>true</externalId>
    <label>REFERENCE NUMBER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>