force-app/main/default/objects/customer__c/fields/sabre_dob__c.field-meta.xml
<CustomField>
    <fullName>sabre_dob__c</fullName>
    <formula>RIGHT(dob__c, 4) + &quot;-&quot; + MID(dob__c, 4, 2) + &quot;-&quot; + LEFT(dob__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre DOB</label>
    <type>Text</type>
</CustomField>