force-app/main/default/objects/customer__c/fields/sabre_passport_issue__c.field-meta.xml
<CustomField>
    <fullName>sabre_passport_issue__c</fullName>
    <formula>RIGHT(passport_issue_date__c,4) + &quot;-&quot; + MID(passport_issue_date__c,4,2) + &quot;-&quot; + LEFT(passport_issue_date__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sabre Passport Issue</label>
    <type>Text</type>
</CustomField>