force-app/main/default/objects/customer__c/fields/sabre_profile_created__c.field-meta.xml
<CustomField>
    <fullName>sabre_profile_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sabre Profile Created</label>
    <type>Checkbox</type>
</CustomField>