force-app/main/default/objects/customer__c/fields/validation_code__c.field-meta.xml
<CustomField>
    <fullName>validation_code__c</fullName>
    <label>Validation Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>