force-app/main/default/objects/customer__c/validationRules/Lock_Passenger_on_Flights_Ticketed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Passenger_on_Flights_Ticketed</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( order__r.Flights_Ticketed__c = true,
NOT ( $Permission.Lock_Orders_On_Export )
)</errorConditionFormula>
    <errorMessage>This order has been Ticketed for Flights - you are unable to make changes to this booking. Please refer to your TL for further assistance.</errorMessage>
</ValidationRule>