force-app/main/default/objects/customer__c/listViews/Order_R2E_Pax_has_Name_Change.listView-meta.xml
<ListView>
    <fullName>Order_R2E_Pax_has_Name_Change</fullName>
    <columns>order__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Deal_ID__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>NAME</columns>
    <columns>title__c</columns>
    <columns>first_name__c</columns>
    <columns>second_name__c</columns>
    <columns>last_name__c</columns>
    <columns>pif_final__c</columns>
    <columns>name_change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>name_change__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>contains</operation>
        <value>Ready For Export</value>
    </filters>
    <label>Order R2E &amp; Pax has Name Change</label>
    <sharedTo>
        <group>CS_Manager</group>
        <group>Flight_Ticketers</group>
        <group>Team_Leaders_CS</group>
        <group>Travel_Consultants_CS</group>
    </sharedTo>
</ListView>