force-app/main/default/objects/customer__c/listViews/Partially_completed.listView-meta.xml
<ListView>
    <fullName>Partially_completed</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>dob__c</columns>
    <columns>order__c</columns>
    <columns>first_name__c</columns>
    <columns>last_name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>passport_expiry_date__c</columns>
    <columns>passport_number__c</columns>
    <columns>pif_final__c</columns>
    <columns>is_waiting_passport__c</columns>
    <columns>Pif_Statuses__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/13/2017 12:00 AM</value>
    </filters>
    <filters>
        <field>pif_final__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>is_waiting_passport__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Passport_Update__c</field>
        <operation>equals</operation>
        <value>Form Returned</value>
    </filters>
    <label>Partially completed</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>