force-app/main/default/objects/customer__c/listViews/X109404_Check.listView-meta.xml
<ListView>
    <fullName>X109404_Check</fullName>
    <columns>NAME</columns>
    <columns>order__c</columns>
    <columns>first_name__c</columns>
    <columns>last_name__c</columns>
    <columns>dob__c</columns>
    <columns>postcode__c</columns>
    <columns>dietary_request__c</columns>
    <columns>medical_request__c</columns>
    <columns>preferredbedding__c</columns>
    <columns>pif_final__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>order__c</field>
        <operation>equals</operation>
        <value>109404</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>customer__c.Master</value>
    </filters>
    <label>109404 Check</label>
    <sharedTo>
        <group>Product</group>
    </sharedTo>
</ListView>